<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#CC000000"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:ignore="Overdraw"
    tools:targetApi="jelly_bean_mr1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <ImageButton
            android:id="@id/exo_rew"
            style="@style/ExoMediaButton.Rewind"
            android:contentDescription="@string/exo_rewind" />

        <ImageButton
            android:id="@id/exo_repeat_toggle"
            style="@style/ExoMediaButton"
            android:contentDescription="@string/exo_repeat_toggle" />

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:contentDescription="@string/exo_play" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:contentDescription="@string/exo_pause" />

        <ImageButton
            android:id="@id/exo_ffwd"
            style="@style/ExoMediaButton.FastForward"
            android:contentDescription="@string/exo_fast_forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            style="@style/myTextViewExo" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1" />

        <TextView
            android:id="@id/exo_duration"
            style="@style/myTextViewExo" />

        <FrameLayout
            android:id="@+id/exo_fullscreen_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/exo_fullscreen_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fullscreen_expand"
                android:contentDescription="@string/fullscreen_icon" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>